Added interactor that observes the VLVisibilityRepository (added interface and impl.) and displays the VLs through its displayer (interface). Tests are included.
Impl. note: Introduced VLVisibilityChange (similar to GeoEntityNotification) in order to track current status.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,7 @@ dependencies {
 
     /* Android Test */
     androidTestCompile testDependencies.robotium
+    androidTestCompile 'org.testng:testng:6.9.6'
 }
 
 android {
