--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -51,6 +51,9 @@ ext {
             javaxInject          : 'javax.inject:javax.inject:1',
             autoFactoryCompiler  : "com.google.auto.factory:auto-factory:1.0-beta3",
 
+            // Glide
+            glide                : 'com.github.bumptech.glide:glide:3.7.0',
+
             //log4j
             log4jLogging         : 'de.mindpipe.android:android-logging-log4j:1.0.3',
             log4jAppache         : 'log4j:log4j:1.2.17',
@@ -58,6 +61,8 @@ ext {
             //ESRI
             esri                 : 'com.esri.arcgis.android:arcgis-android:10.2.8-1',
 
+            // Circular Progress
+            circularProgress     : 'me.zhanghai.android.materialprogressbar:library:1.3.0'
     ]
 
     testDependencies = [
