--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,9 +90,15 @@ dependencies {
 //    compile dependencies.fresco
 //    compile dependencies.frescoAnimatedGif
 
+    /* Glide */
+    compile dependencies.glide
+
     /* log4j */
     compile dependencies.log4jLogging
     compile dependencies.log4jAppache
+
+    /* Circular Progress */
+    compile dependencies.circularProgress
 
     /* Test */
     testCompile testDependencies.junit
