--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -55,6 +55,9 @@ ext {
             fresco               : 'com.facebook.fresco:fresco:0.10.0',
             frescoAnimatedGif    : 'com.facebook.fresco:animated-gif:0.10.0',
 
+            // Glide
+            glide                : 'com.github.bumptech.glide:glide:3.7.0',
+
             //log4j
             log4jLogging         : 'de.mindpipe.android:android-logging-log4j:1.0.3',
             log4jAppache         : 'log4j:log4j:1.2.17',
@@ -62,6 +65,8 @@ ext {
             //ESRI
             esri                 : 'com.esri.arcgis.android:arcgis-android:10.2.8-1',
 
+            // Circular Progress
+            circularProgress     : 'me.zhanghai.android.materialprogressbar:library:1.3.0'
     ]
 
     testDependencies = [
