--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,9 @@ dependencies {
     /* Circular Progress */
     compile dependencies.circularProgress
 
+    /* ImageViewZoom */
+    compile dependencies.imageViewZoom
+
     /* Test */
     testCompile testDependencies.junit
     testCompile testDependencies.roboelectric
