--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -63,7 +63,10 @@ ext {
             esri                 : 'com.esri.arcgis.android:arcgis-android:10.2.8-1',
 
             // Circular Progress
-            circularProgress     : 'me.zhanghai.android.materialprogressbar:library:1.3.0'
+            circularProgress     : 'me.zhanghai.android.materialprogressbar:library:1.3.0',
+
+            // ImageViewZoom
+            imageViewZoom        : 'it.sephiroth.android.library.imagezoom:imagezoom:+'
     ]
 
     testDependencies = [
