--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         applicationId globalConfiguration.androidApplicationId
         versionCode globalConfiguration.androidVersionCode
         versionName globalConfiguration.androidVersionName
+        multiDexEnabled true
     }
 
     signingConfigs {
@@ -71,6 +72,7 @@ dependencies {
     compile dependencies.androidDesign
     compile dependencies.slideUpPannel
     compile dependencies.androidSupportV4
+    compile dependencies.multiDex
     compile dependencies.pagerSlidingTabStrip
 
     /* rx */
