--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -66,7 +66,7 @@ ext {
             circularProgress     : 'com.github.rahatarmanahmed:circularprogressview:2.5.0',
 
             // ImageViewZoom
-            imageViewZoom        : 'it.sephiroth.android.library.imagezoom:imagezoom:+'
+            imageViewZoom        : 'it.sephiroth.android.library.imagezoom:imagezoom:2.2.5'
     ]
 
     testDependencies = [
