Clicking on "locate me" fab will also use the compass to align the map with the direction the device is currently facing.
Additional changes:
1. Added lambda support for app module
2. Changed the compass plugin  - it's now refreshing its position at 60 fps (logic is on a separate thread)
3. Moved ESRI plugins and graphics into matching packages
4. changed LocationFetcher to expose its LocationListener to be shared with the ESRI LocationDisplayManager

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'me.tatarka.retrolambda'
+
 
 android {
 
@@ -53,6 +55,11 @@ android {
         exclude 'META-INF/LGPL2.1'
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
 }
