Scroll down fab added to chat panel. Fab is visible when the chat recycler view isn't showing the last message. Fab visibility transitions are animated. Clicking on fab will scroll down (and will make it disappear).

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
         versionCode globalConfiguration.androidVersionCode
         versionName globalConfiguration.androidVersionName
         multiDexEnabled true
+        vectorDrawables.useSupportLibrary true
     }
 
     signingConfigs {
