Device's (soft) keyboard doesn't hide SendMessageFragment.
More things:
1. Changed release and debug app name to Gimelגימל
2. Sliding the bottom panel DOESN'T change the main content size anymore.
3. Sliding-panel anchor point changed to 0.4 (40%)
4. EsriGGMapView can now be rendered (as an empty white-view) at preview-time
5. Used compat library to tint the SendPhoto button to support APIs < 21

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,7 @@ dependencies {
     compile dependencies.androidSupportV4
     compile dependencies.multiDex
     compile dependencies.pagerSlidingTabStrip
+    compile dependencies.keyboardVisibilityEvent
 
     /* rx */
     compile dependencies.rxAndroid
