Changed to compress method to use external library

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,6 +110,9 @@ dependencies {
     /* ImageViewZoom */
     compile dependencies.imageViewZoom
 
+    /* Compressor */
+    compile dependencies.compressor
+
     /* Test */
     testCompile testDependencies.junit
     testCompile testDependencies.roboelectric
