--- a/data/build.gradle
+++ b/data/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     compile dependencies.okHttpLogging
     compile dependencies.retrofitGsonConverter
 
+    /* Compressor */
+    compile dependencies.compressor
+
     //Tests
     testCompile testDependencies.mockito
     testCompile testDependencies.junit
