--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,6 +112,9 @@ dependencies {
     /* ImageViewZoom */
     compile dependencies.imageViewZoom
 
+    /* Compressor */
+    compile dependencies.compressor
+
     /* Test */
     testCompile testDependencies.junit
     testCompile testDependencies.roboelectric
