Refactored the toolbar into its own fragment. Added BoomMenuButton (a 3rd party open-source menu library) and 3 buttons to it to 3 future actions: send quadrilateral, draw geometry and measure distance.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,7 @@ dependencies {
     compile dependencies.androidSupportV4
     compile dependencies.multiDex
     compile dependencies.pagerSlidingTabStrip
+    compile dependencies.boomMenu
 
     /* rx */
     compile dependencies.rxAndroid
