--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,10 @@
             android:name=".app.message.view.ImageFullscreenActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_image_fullscreen"/>
+        <activity
+            android:name=".app.map.view.DrawActionActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/activity_action_draw_title"/>
     </application>
 
 </manifest>
