--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,7 @@ dependencies {
     compile dependencies.multiDex
     compile dependencies.pagerSlidingTabStrip
     compile dependencies.boomMenu
+    compile dependencies.autoFitTextView
 
     /* rx */
     compile dependencies.rxAndroid
