1. Added toolbar 2. Added back button to toolbar 3. Updated toolbar header to be set by the action fragment 4. Removed "Fill quadrilateral point" textview from the send quad. fragment layout 5. Moved butterknife binding to BaseActivity 6. Made activity resize on soft-keyboard event so fab would be seen with keyboard shown 7. Hide keyboard on send quad fab click

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,8 @@
         <activity
             android:name=".app.map.view.DrawActionActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/activity_action_draw_title"/>
+            android:label="@string/activity_action_draw_title"
+            android:windowSoftInputMode="adjustResize"/>
     </application>
 
 </manifest>
