Added geojson support to all exisiting geo entities

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     def testDependencies = rootProject.ext.testDependencies
 
     compile project(path: ':domain')
+    compile project(path: ':geogson')
 
     //Android
     compile dependencies.androidAnnotations
