--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'me.tatarka.retrolambda'
 
+configurations.all {
+    resolutionStrategy {
+        force 'com.google.guava:guava:19.0'
+    }
+}
 
 android {
 
