Added new ProxyGlideModule to load images from proxy
Extracted the OkHttpClient initializiation to factory
Changed the AlertData geometry from Point to generic Geometry

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,7 @@ dependencies {
     apt dependencies.butterKnifeCompiler
     /* Glide */
     compile dependencies.glide
+    compile dependencies.glideOkHttp
     /* log4j */
     compile dependencies.log4jLogging
     compile dependencies.log4jAppache
