--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.teamagam.gimelgimel"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.teamagam.gimelgimel">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <uses-feature
         android:name="android.hardware.camera"
-        android:required="true"/>
+        android:required="true" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:required="true" />
 
     <application
         android:name=".app.GGApplication"
@@ -31,30 +31,25 @@
             android:name=".app.common.launcher.LauncherActivity"
             android:label="@string/activity_launcher_title">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity
             android:name=".app.mainActivity.view.MainActivity"
             android:label="@string/activity_main_title"
-            android:screenOrientation="portrait"/>
-
-        <activity
-            android:name=".app.settings.SettingsActivity"
-            android:label="@string/activity_settings_title"
-            android:theme="@style/Theme.GimelGimel.WithActionBar"/>
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".app.message.view.ImageFullscreenActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/activity_image_fullscreen_title"/>
+            android:label="@string/activity_image_fullscreen_title" />
         <activity
             android:name=".app.map.view.DrawActionActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/activity_action_draw_title"
-            android:windowSoftInputMode="adjustResize"/>
+            android:windowSoftInputMode="adjustResize" />
     </application>
 
 </manifest>
