--- a/circle.yml
+++ b/circle.yml
@@ -18,8 +18,8 @@ dependencies:
   pre:
     - chmod +x gradlew
     - echo y | android update sdk --no-ui --all --filter "tools,platform-tools,android-23"
-    - echo y | android update sdk --no-ui --all --filter "build-tools-23.0.2"
-    - echo y | android update sdk --no-ui --filter build-tools-24.0.0,android-24,extra-android-m2repository
+    - echo y | android update sdk --no-ui --all --filter "build-tools-25.0.3"
+    - echo y | android update sdk --no-ui --filter "extra-android-m2repository"
   cache_directories:
     - ~/.android
 
