--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -39,8 +39,8 @@ ext {
       autoFitTextView        : 'me.grantland:autofittextview:0.2.1',
 
       //Rx
-      rxAndroid              : 'io.reactivex:rxandroid:1.2.1',
-      rxJava                 : 'io.reactivex:rxjava:1.1.6',
+      rxAndroid              : 'io.reactivex.rxjava2:rxandroid:2.0.1',
+      rxJava                 : 'io.reactivex.rxjava2:rxjava:2.0.6',
 
       //Retrofit
       retrofit               : 'com.squareup.retrofit2:retrofit:2.0.2',
