First successful build, app not working of course. retrofit rxjava adapter doesn't fit.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,11 +54,13 @@ android {
     enabled = true
   }
 
-  /* ESRI recommended packaging options to avoid build errors */
+  /* ESRI + rxjava recommended packaging options to avoid build errors */
   packagingOptions {
     exclude 'META-INF/LGPL2.1'
     exclude 'META-INF/LICENSE'
     exclude 'META-INF/NOTICE'
+
+    exclude 'META-INF/rxjava.properties'
   }
 
   compileOptions {
