--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
   compile project(path: ':data')
   /* android design */
   compile dependencies.recyclerview
+  compile dependencies.cardView
   compile dependencies.androidDesign
   compile dependencies.slideUpPannel
   compile dependencies.androidSupportV4
