--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -22,6 +22,7 @@ ext {
   androidSupportVersion = '24.2.0'
 
   retrofitVersion = '2.2.0'
+  powermockVersion = '1.7.0'
 
   //Libraries
   dependencies = [
@@ -94,10 +95,13 @@ ext {
       //Navigation Tab Bar
       navigationTabBar       : 'devlight.io:navigationtabbar:1.2.5']
 
-  testDependencies = [junit       : 'junit:junit:4.12',
-                      mockito     : 'org.mockito:mockito-core:2.2.9',
-                      roboelectric: 'org.robolectric:robolectric:3.0',
-                      robotium    : 'com.jayway.android.robotium:robotium-solo:5.3.1'
+  testDependencies = [junit            : 'junit:junit:4.12',
+                      mockito          : 'org.mockito:mockito-core:2.2.9',
+                      powermock        : "org.powermock:powermock-core:${powermockVersion}",
+                      powermockJunit   : "org.powermock:powermock-module-junit4:${powermockVersion}",
+                      powermockMockito : "org.powermock:powermock-api-mockito2:${powermockVersion}",
+                      roboelectric     : 'org.robolectric:robolectric:3.0',
+                      robotium         : 'com.jayway.android.robotium:robotium-solo:5.3.1'
 
   ]
 }
