Added functionality of color picking

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,8 @@ dependencies {
   compile dependencies.log4jAppache
   /* Circular Progress */
   compile dependencies.circularProgress
+  /* Color Picker */
+  compile dependencies.colorPicker
   /* ImageViewZoom */
   compile dependencies.imageViewZoom
   /* Alerter */
