Starting dynamic layer editing action when clicking boom-menu's button. Showing an instructional toast on action start. Stopped action fragments from showing soft keyboard when it starts.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,7 @@ dependencies {
   compile dependencies.keyboardVisibilityEvent
   compile dependencies.boomMenu
   compile dependencies.autoFitTextView
+  compile dependencies.constraintLayout
   /* rx */
   compile dependencies.rxAndroid
   /* Dagger 2 */
