--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -43,6 +43,7 @@ ext {
       keyboardVisibilityEvent: 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:2.1.0',
       boomMenu               : 'com.nightonke:boommenu:2.0.7',
       autoFitTextView        : 'me.grantland:autofittextview:0.2.1',
+      constraintLayout       : 'com.android.support.constraint:constraint-layout:1.0.2',
 
       //Rx
       rxAndroid              : 'io.reactivex.rxjava2:rxandroid:2.0.1',
