--- a/data/build.gradle
+++ b/data/build.gradle
@@ -58,12 +58,13 @@ dependencies {
   compile dependencies.roomRxJava
 
   //Tests
+  testCompile testDependencies.junit
   testCompile testDependencies.mockito
   testCompile testDependencies.powermock
   testCompile testDependencies.powermockJunit
   testCompile testDependencies.powermockMockito
-  testCompile testDependencies.junit
 
   //AndroidTest
   testCompile testDependencies.roboelectric
+  testCompile testDependencies.room
 }
