--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,6 +100,7 @@ dependencies {
   compile dependencies.keyboardVisibilityEvent
   compile dependencies.boomMenu
   compile dependencies.autoFitTextView
+  compile dependencies.constraintLayout
   /* rx */
   compile dependencies.rxAndroid
   /* Dagger 2 */
