--- a/data/build.gradle
+++ b/data/build.gradle
@@ -38,8 +38,8 @@ dependencies {
   compile project(path: ':geogson')
 
   //Android
-  compile dependencies.androidAnnotations
-  compile dependencies.androidSupportV4
+  /*compile dependencies.androidAnnotations
+  compile dependencies.androidSupportV4*/
 
   compile dependencies.rxAndroid
 
