--- a/app/build.gradle
+++ b/app/build.gradle
@@ -127,11 +127,13 @@ dependencies {
 
 android {
   // Always show the result of every unit test, even if it passes.
-  testOptions.unitTests.all {
-    testLogging {
-      events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
+  testOptions.unitTests {
+    returnDefaultValues = true
+    all {
+      testLogging {
+        events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
+      }
     }
   }
 }
-
 
