Displaying all layers in new menu in simple uglish style

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,6 +130,8 @@ dependencies {
   compile dependencies.navigationTabBar
   /* Bottom Bar */
   compile dependencies.bottomBar
+  /* Android Tree View*/
+  compile dependencies.androidTreeView
   /* Test */
   testCompile testDependencies.junit
   testCompile testDependencies.roboelectric
