--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,7 @@ android:
     # if you need to run emulator(s) during your tests
 #    - sys-img-armeabi-v7a-android-22
 #    - sys-img-armeabi-v7a-android-17
+
+before_install:
+- export JAVA7_HOME=/usr/lib/jvm/java-7-oracle
+- export JAVA8_HOME=/usr/lib/jvm/java-8-oracle
