--- a/.travis.yml
+++ b/.travis.yml
@@ -29,3 +29,7 @@ android:
 before_install:
 - export JAVA7_HOME=/usr/lib/jvm/java-7-oracle
 - export JAVA8_HOME=/usr/lib/jvm/java-8-oracle
+
+script:
+- ./gradlew assembleDebug
+- ./gradlew test
