--- a/data/build.gradle
+++ b/data/build.gradle
@@ -29,6 +29,16 @@ android {
     sourceCompatibility JavaVersion.VERSION_1_8
     targetCompatibility JavaVersion.VERSION_1_8
   }
+
+  // Always show the result of every unit test, even if it passes.
+  testOptions.unitTests {
+    returnDefaultValues = true
+    all {
+      testLogging {
+        events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
+      }
+    }
+  }
 }
 dependencies {
   def dependencies = rootProject.ext.dependencies
