--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -29,3 +29,9 @@ dependencies {
   testCompile testDependencies.junit
   testCompile testDependencies.mockito
 }
+
+
+//Show tests log
+test {
+  testLogging.showStandardStreams = true
+}
